[finishes #182171586] Fix buttons vertical alignment on the data manager page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -180,6 +180,10 @@ body {
   padding-left: 30px;
 }
 
+.url-button {
+  line-height: 45px;
+}
+
 .form-input-wrapper,
 .search-control-wrapper,
 .url-control-wrapper {
